Fixed off-center nav, removed unnecessary divs so that all we have left is a wrapper and a container, similar to what we did in class.

--- a/about.css
+++ b/about.css
@@ -24,6 +24,9 @@ body {
 .navbar > li + li {
   margin-left: 20px;
 }
+.round-img {
+  border-radius: 15px;
+}
 /*Styling for links in nav*/
 .navbar > li > a {
   padding-right: 0;
